Changes to make project actually build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,21 +30,25 @@ else(WIN32)
     target_link_libraries(vulkan_grass_rendering ${CMAKE_THREAD_LIBS_INIT})
 endif(WIN32)
 
+if(WIN32)
+    set(GLSLANGVALIDATOR "/Bin/glslangValidator.exe")
+endif(WIN32)
+if(UNIX)
+    set(GLSLANGVALIDATOR "/bin/glslangValidator")
+endif(UNIX)
+
 foreach(SHADER_SOURCE ${SHADER_SOURCES})
     set(SHADER_DIR ${CMAKE_CURRENT_BINARY_DIR}/shaders)
 
-    if(WIN32)
-        get_filename_component(fname ${SHADER_SOURCE} NAME)
-        add_custom_target(${fname}.spv
-            COMMAND ${CMAKE_COMMAND} -E make_directory ${SHADER_DIR} && 
-            $ENV{VK_SDK_PATH}/Bin/glslangValidator.exe -V ${SHADER_SOURCE} -o ${SHADER_DIR}/${fname}.spv -g
-            SOURCES ${SHADER_SOURCE}
-        )
-        ExternalTarget("Shaders" ${fname}.spv)
-        add_dependencies(vulkan_grass_rendering ${fname}.spv)
-    endif(WIN32)
-
-    # TODO: Build shaders on not windows
+    get_filename_component(fname ${SHADER_SOURCE} NAME)
+    add_custom_target(${fname}.spv
+        COMMAND ${CMAKE_COMMAND} -E make_directory ${SHADER_DIR} && 
+        $ENV{VK_SDK_PATH}/${GLSLANGVALIDATOR} -V ${SHADER_SOURCE} -o ${SHADER_DIR}/${fname}.spv -g
+        SOURCES ${SHADER_SOURCE}
+    )
+    ExternalTarget("Shaders" ${fname}.spv)
+    add_dependencies(vulkan_grass_rendering ${fname}.spv)
+ 
 endforeach()
 
 target_link_libraries(vulkan_grass_rendering ${ASSIMP_LIBRARIES} Vulkan::Vulkan glfw)
